--- a/application/templates/admin/filter_projects.html
+++ b/application/templates/admin/filter_projects.html
@@ -73,7 +73,7 @@
                <td>{{ project.add2 }}</td>
                <td>
                   <form action="/projects" , method="POST">
-                     <a href="/dpr/{{project.id}}" value=2
+                     <a href="/dpr_admin/{{project.id}}" value=2
                      style="padding: auto; justify-content:center;" type="button"
                      class="form-control-login btn btn-primary btn-theme btn-md">View Details</a>
                   </form>
