--- a/application/templates/committee/dpr.html
+++ b/application/templates/committee/dpr.html
@@ -428,7 +428,7 @@
       </tbody>
     </table>
     <!-- end of documents table -->
-
+<p>Total: {{q.total}}</p>
     <br><br>
   </section>
 {% endblock %}
