--- a/application/templates/proponent/dpr.html
+++ b/application/templates/proponent/dpr.html
@@ -283,7 +283,7 @@
     <tbody style="text-align:center;">
       <tr>
         <th scope="row">1</th>
-        <td><a href="{{ url_for('land_proof', id=current_user.id) }}">Evidence of Land Ownership</a></td>
+        <td><a href="{{ url_for('land_proof', id=current_user.id) }}" target="_blank">Evidence of Land Ownership</a></td>
         <td></td>
       </tr>
       <tr>
