--- a/application/templates/committee/layout.html
+++ b/application/templates/committee/layout.html
@@ -26,7 +26,7 @@
             <li>
                <a href="{{ url_for('sanctioned_projects') }}">
                <i class='bx bx-grid-alt' ></i>
-               <span class="links_name">Sanctioned Projects</span>
+               <span class="links_name">Approved Projects</span>
                </a> 
             </li>
             <li>
