--- a/application/templates/committee/projects.html
+++ b/application/templates/committee/projects.html
@@ -67,42 +67,42 @@
          </thead>
          <tbody>
             {% for project in p %}
-            {% if project.committee_approval == 0 %}
             <tr>
-               <input type="hidden" name="id" value="{{project.id}}"/>
+
                <td>{{ project.id }}</td>
                <td>{{ project.name }}</td>
                <td>{{ project.add2 }}</td>
                <td>
                   <form action="/projects" , method="POST">
-                     <!-- <button name="method" value=1 type="submit" class="btn btn-primary" > Set Marks </button> -->
+                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                      <a href="/cdpr_marks/{{project.id}}"
                         style="padding: auto; justify-content:center;" type="button"
                         class="form-control-login btn btn-primary btn-theme btn-md">Set Marks</a>
                   </form>
                </td>
                <td>
-                  <form action="/projects" , method="POST">
-                     <!-- <button name="method" value=1 type="submit" class="btn btn-primary" > View </button> -->
+                  <form action="/projects" , method="POST" >
+                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                      <a href="/cdpr/{{project.id}}" value=2
                         style="padding: auto; justify-content:center;" type="button"
                         class="form-control-login btn btn-primary btn-theme btn-md">View Details</a>
                   </form>
                </td>
                <td>
-                  <form action="/projects" , method="POST">
+                  <form action="/projects" , method="POST" onsubmit="setattr(project,'committee_approval',1)">
                      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                     <input type="hidden" name="id" value="{{ project.id }}"/>
                      <button name="method" value=1 type="submit" class="btn btn-success"> Approve </button>
                   </form>
                </td>
                <td>
                   <form action="/projects" , method="POST">
                      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                     <input type="hidden" name="id" value="{{ project.id }}"/>
                      <button name="method" value=2 type="submit" class="btn btn-danger "> Reject </button>
                   </form>
                </td>
             </tr>
-            {% endif %}
             {% endfor %}
          </tbody>
       </table>
