--- a/application/templates/otp.html
+++ b/application/templates/otp.html
@@ -1,4 +1,4 @@
-<!-- <!doctype html>
+<!doctype html>
 <html lang="en">
    <head>
       <meta charset="utf-8">
@@ -19,15 +19,22 @@
                         <div class="mb-9">
                            <h3 class="h4 font-weight-bold text-theme" style="text-align:center;">OTP Verification</h3>
                         </div>
+                        <form method="POST" action="/verification">
                            <div class="container form-group">
                               <div class="row" style="padding-top:40px;">
                                  <div class="col-md-3"></div>
                                  <div class="col-md-6" style="align-items:center;">
-                                    <form method="POST" action="/verification">
-                                       <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                                       <div><input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                                        <p>Enter OTP</p>
-                                       <input type="number" name="user_otp" style="background-color: rgb(255, 255, 255);" class="form-control" required>
-                                       <input style="padding: auto;" type="submit"  value="SUBMIT" class="form-control-login btn btn-theme btn-lg ">
+                                       <input type="number" name="user_otp" style="background-color: rgb(255, 255, 255); padding-left:50%;" class="form-control" required>
+                                       </div>
+                                       <br>
+                                       <div class="container" style="width:70%; display:flex; padding-top:45px; justify-content:center">
+                                       <input style="padding: auto; width:50%; " type="submit"  value="SUBMIT"  class="form-control-login btn btn-theme btn-lg ">
+                                       </div>
+                                       </div>
+                                       </div>
+                                       </div>
                                     </form>
                                  </div>
                                  <br>
@@ -45,15 +52,4 @@
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
    </body>
-</html> -->
-
-<html>
-    <body>
-        <form action="/verification" method='POST'>
-            <div>
-                <input type="number" name="user_otp">
-                <input type=submit>
-            </div>
-        </form>
-    </body>
 </html>
