--- a/application/templates/admin/layout.html
+++ b/application/templates/admin/layout.html
@@ -42,6 +42,12 @@
                </a>
             </li>
             <li>
+               <a href="/compare">
+               <i class='bx bx-book-alt' ></i>
+               <span class="links_name">Compare Projects</span>
+               </a>
+            </li>
+            <li>
                <a href="{{ url_for('sanctioned_infrastructure') }}">
                <i class='bx bx-book-alt' ></i>
                <span class="links_name">Sanctioned Projects</span>
