--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -162,7 +162,14 @@
       <!-- End Footer -->
 
       <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
+      <script>
+         window.AcquaintedWidgetDomain = 'https://getacquainted.co';
+         window.AcquaintedWidgetId = 'aefd0728-257d-47f1-955f-a0cfda8459c6';
+         var s = document.createElement('script'); 
+         s.src = AcquaintedWidgetDomain + '/js/widget-loader.js';
+         s.async = true;
+         document.body.appendChild(s);
+     </script>
       <!-- Vendor JS Files -->
       <script src="static/vendor/purecounter/purecounter.js"></script>
       <script src="static/vendor/aos/aos.js"></script>
